k8s/overlays/int/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videoclub-ingress-int
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx # Deprecada
  rules:
    - host: videoclub-int.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service-int
                port:
                  number: 8080
